Alignment/overlap fixes

--- a/theme11/theme11.css
+++ b/theme11/theme11.css
@@ -165,6 +165,7 @@ body.lower .audiowrapper .trackname, body.lower .custom_audio_buttons {
 #page {
 	padding: 0.5em 2.5em 3.5em;
 	display: grid;
+	align-self: start;
 }
 /* #region Subtitle */
 #secondary {
@@ -187,7 +188,7 @@ body.lower .audiowrapper .trackname, body.lower .custom_audio_buttons {
 .tmblr-iframe--unified-controls.iframe-controls--desktop ~ #body #actions { top: 50px }
 #actions {
 	margin-bottom: 1em;
-	text-align: right;
+	justify-self: right;
 	position: sticky;
 	top: 0.5em;
 	z-index: 3;
@@ -349,6 +350,7 @@ span.curr { margin: 0 0.75em }
 }
 /* #endregion */
 /* #region Sidebar: LEFT */
+#left:empty { display: none }
 #left a {
 	border-bottom: none;
 	line-height: 2;
@@ -831,7 +833,6 @@ p.npf_chat { font-family: 'Monaco', 'Consolas', Courier, monospace }
 		overflow-wrap: anywhere;
 		hyphens: auto;
 	}
-	#left:empty { display: none }
 	#left div {
 		border-top: 0.15em solid var(--bg2);
 		padding: 1.3em 0;
